<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linLayoutVert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/LLV_textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/LLV_textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/LLV_textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/LLV_textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/LLV_textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

    </LinearLayout>
