<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp">

        <Button
            android:id="@+id/mainButton1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/main_button_1"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="-15dp" />

        <Button
            android:id="@+id/mainButton2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/main_button_2"
            tools:layout_editor_absoluteX="-14dp"
            tools:layout_editor_absoluteY="101dp" />

        <Button
            android:id="@+id/mainButton3"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/main_button_3"
            tools:layout_editor_absoluteX="-31dp"
            tools:layout_editor_absoluteY="171dp" />

        <Button
            android:id="@+id/mainButton4"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/main_button_4"
            tools:layout_editor_absoluteX="-30dp"
            tools:layout_editor_absoluteY="245dp" />
    </LinearLayout>
