<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:columnCount="2"
        android:useDefaultMargins="true"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp">

        <TextView
            android:id="@+id/GL_textView1"
            android:layout_columnSpan="1"
            android:text="@string/one"
            android:layout_margin="5dp"
            android:layout_gravity="fill"
            android:layout_width="150dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/GL_textView2"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/two"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/GL_textView3"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:text="@string/three"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/GL_textView4"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:text="@string/four"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/GL_textView5"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:text="@string/five"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

    </GridLayout>

