<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linLayoutHoriz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp">

        <TextView
            android:id="@+id/LLH_textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/LLH_textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/LLH_textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/LLH_textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/LLH_textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="45sp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

</LinearLayout>


